Remove overflow fix for Vector 2022 CSS grid
The underlying issue appears to be fixed, and having overflow: auto
is causing a scrollbar to appear.

--- a/resources/css/ext.translate.special.translate.css
+++ b/resources/css/ext.translate.special.translate.css
@@ -183,8 +183,3 @@
 .mw-special-Translate #firstHeading {
 	display: none;
 }
-
-/** Vector 2022 specific fix for CSS grid layouts. See: T313671 */
-.mw-special-Translate.skin-vector-2022 .mw-content-container {
-	overflow-x: auto;
-}
