--- a/resources/src/ext.translate.specialTranslationStash/index.css
+++ b/resources/src/ext.translate.specialTranslationStash/index.css
@@ -75,8 +75,3 @@ h1 {
 .sourcemessage {
 	top: -10px;
 }
-
-/** Vector 2022 specific fix for CSS grid layouts. See: T313671 */
-.mw-special-TranslationStash.skin-vector-2022 .mw-content-container {
-	overflow-x: auto;
-}
